  (Xavier Leroy, discovery by Olivier Andrieu)

- PR#7496: Fixed conjunctive polymorphic variant tags do not unify
  with themselves
  (Jacques Garrigue, report by Leo White)

- PR#7506: pprintast ignores attributes in tails of a list
  (Alain Frisch, report by Kenichi Asai and Gabriel Scherer)

- PR#7543: short-paths printtyp can fail on packed type error messages
  (Florian Angeletti)

- GPR#1155: Fix a race condition with WAIT_NOHANG on Windows
  (Jérémie Dimino and David Allsopp)

- PR#7513: List.compare_length_with mishandles negative numbers / overflow
  (Fabrice Le Fessant, report by Jeremy Yallop)

- PR#7531a: Default argument is not evaluated even after passing a
  non-labeled argument
  (Jacques Garrigue, report by Stephen Dolan)

- GPR#1199: Pretty-printing formatting cleanup in pprintast
  (Ethan Aubin, suggestion by Gabriel Scherer, review by David Allsopp,
  Florian Angeletti, and Gabriel Scherer)

### Runtime system:

- GPR#71: The runtime can now be shut down gracefully by means of the new
  caml_shutdown and caml_startup_pooled functions. The new 'c' flag in
  OCAMLRUNPARAM enables shutting the runtime properly on process exit.
  (Max Mouratov, review and discussion by Damien Doligez, Gabriel Scherer,
  Mark Shinwell, Thomas Braibant, Stephen Dolan, Pierre Chambart,
  François Bobot, Jacques Garrigue, David Allsopp, and Alain Frisch)

- GPR#938, GPR#1170: Stack overflow detection on 64-bit Windows
  (Olivier Andrieu)

Next major version (4.05.0):
----------------------------

(Changes that can break existing programs are marked with a "*")

### Language features:

### Code generation and optimizations:

- MPR#7201, GPR#954: Correct wrong optimisation of "0 / <expr>"
  and "0 mod <expr>" in the case when <expr> was a non-constant
  evaluating to zero
  (Mark Shinwell)

- MPR#7357, GPR#832: Improve compilation time for toplevel
  include(struct ... end : sig ... end)
  (Alain Frisch, report by Hongbo Zhang, review by Jacques Garrigue)
